# toggl-sync

./: .gitignore  README.md  github_actions_deployment.md  server_deployment.md  testing_instructions.md
python/: .env.example  .gitignore  README.md  pyproject.toml
python/toggl_export_cli/: __main__.py  exporter.py
python/toggl_github_sync/: __init__.py  __main__.py  aggregator.py  config.py  exporter.py  formatter.py  scheduler.py  sync.py
python/toggl_github_sync/api/: github.py  toggl.py
python/toggl_github_sync/tests/: test_aggregator.py  test_config.py  test_error_handler.py  test_formatter.py  test_github.py  test_scheduler.py  test_toggl.py
python/toggl_github_sync/utils/: error_handler.py
typescript/: .env.example  .gitignore  README.md  package.json
typescript/src/: aggregator.ts  config.ts  formatter.ts  index.ts  scheduler.ts  sync.ts
typescript/src/api/: github.ts  toggl.ts
typescript/src/scheduler/: index.ts
typescript/src/tests/: aggregator.test.ts  config.test.ts  error-handler.test.ts  formatter.test.ts  github.test.ts  scheduler.test.ts  toggl.test.ts
typescript/src/utils/: error-handler.ts  logger.ts
